// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render bold 1`] = `
.c0 {
  font-size: 0.938em;
  line-height: 1.25em;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
  }
}

<p
  className="c0"
>
  This is text with 
  <strong>
    some bold formatting
  </strong>
  .
</p>
`;

exports[`Text should render inline-code 1`] = `
.c0 {
  font-size: 0.938em;
  line-height: 1.25em;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
  }
}

<p
  className="c0"
>
  This is text with 
  <code>
    some inline code
  </code>
  .
</p>
`;

exports[`Text should render italics 1`] = `
.c0 {
  font-size: 0.938em;
  line-height: 1.25em;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
  }
}

<p
  className="c0"
>
  This is text with 
  <em>
    some italic formatting
  </em>
  .
</p>
`;

exports[`Text should render strike-through 1`] = `
.c0 {
  font-size: 0.938em;
  line-height: 1.25em;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
  }
}

<p
  className="c0"
>
  This is text with 
  <del>
    some strike-through formatting
  </del>
  .
</p>
`;
